k8s/bastille/nextcloud/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`file.dcnt.company`)
      kind: Rule
      priority: 0
      services:
        - name: nextcloud
          port: 8080
      middlewares:
        - name: default-headers
          namespace: authentik
    #     - name: authentik
    #       namespace: authentik
    # - match: "Host(`file.dcnt.company`) && PathPrefix(`/outpost.goauthentik.io/`)"
    #   kind: Rule
    #   priority: 15
    #   services:
    #       - kind: Service
    #         name: ak-outpost-authentik-embedded-outpost
    #         namespace: authentik
    #         port: 9000
  tls:
    secretName: dcnt-company-tls
